# geco

./: .gitignore  README.md  ireconf_cmake_pc.sh
geco/: CMakeLists.txt  main.cpp  prova.cpp  prova.h
geco/dbase/: dbanagrafica.cpp  dbanagrafica.h  iDbItem.h
